--- a/docker-compose/envs/common-stats.env
+++ b/docker-compose/envs/common-stats.env
@@ -27,3 +27,5 @@ STATS__TRACING__ENABLED=true
 STATS__TRACING__FORMAT=default
 
 STATS__BLOCKSCOUT_API_URL=http://host.docker.internal
+
+STATS_CHARTS__TEMPLATE_VALUES__NATIVE_COIN_SYMBOL=MAGIC
