--- a/.github/actions/setup-repo/action.yml
+++ b/.github/actions/setup-repo/action.yml
@@ -1,11 +1,8 @@
 name: 'Setup repo'
 description: 'Setup repo: checkout/login/extract metadata, Set up Docker Buildx'
 inputs:
-  docker-username:
-    description: 'Docker username'
-    required: true
-  docker-password:
-    description: 'Docker password'
+  github-token:
+    description: 'GitHub token for ghcr.io authentication'
     required: true
   docker-remote-multi-platform:
     description: 'Docker remote multi-platform builder'
@@ -71,17 +68,18 @@ runs:
           - endpoint: ssh://root@${{ env.BUILDER_IP }}
             platforms: linux/arm64/v8
 
-    - name: Log in to Docker Hub
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v3
       with:
-        username: ${{ inputs.docker-username }}
-        password: ${{ inputs.docker-password }}
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ inputs.github-token }}
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ inputs.docker-image }}
+        images: ghcr.io/${{ inputs.docker-image }}
 
     - name: Add SHORT_SHA env property with commit short sha
       shell: bash
