--- a/.github/workflows/release-celo.yml
+++ b/.github/workflows/release-celo.yml
@@ -33,7 +33,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: ghcr.io/blockscout/blockscout-celo:latest, blockscout/blockscout-celo:${{ env.RELEASE_VERSION }}
+          tags: ghcr.io/blockscout/blockscout-celo:latest, ghcr.io/blockscout/blockscout-celo:${{ env.RELEASE_VERSION }}
           labels: ${{ steps.setup.outputs.docker-labels }}
           platforms: |
             linux/amd64
