--- a/.github/workflows/release-redstone.yml
+++ b/.github/workflows/release-redstone.yml
@@ -33,7 +33,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: true
-          tags: ghcr.io/blockscout/blockscout-redstone:latest, blockscout/blockscout-redstone:${{ env.RELEASE_VERSION }}
+          tags: ghcr.io/blockscout/blockscout-redstone:latest, ghcr.io/blockscout/blockscout-redstone:${{ env.RELEASE_VERSION }}
           labels: ${{ steps.setup.outputs.docker-labels }}
           platforms: |
             linux/amd64
