Process review comments and rename vars

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -48,47 +48,47 @@ COIN_NAME=
 # CHAIN_SPEC_PROCESSING_DELAY=
 # SUPPLY_MODULE=
 COIN=
-DISABLE_EXCHANGE_RATES=true
-# EXCHANGE_RATES_NATIVE_COIN_SOURCE=
-# EXCHANGE_RATES_SECONDARY_COIN_SOURCE=
-# EXCHANGE_RATES_TOKENS_SOURCE=
-# EXCHANGE_RATES_NATIVE_COIN_HISTORY_SOURCE=
-# EXCHANGE_RATES_SECONDARY_COIN_HISTORY_SOURCE=
-# EXCHANGE_RATES_MARKET_CAP_HISTORY_SOURCE=
-# EXCHANGE_RATES_TVL_HISTORY_SOURCE=
-# EXCHANGE_RATES_COINGECKO_COIN_ID=
-# EXCHANGE_RATES_COINGECKO_SECONDARY_COIN_ID=
-# EXCHANGE_RATES_COINGECKO_API_KEY=
-# EXCHANGE_RATES_COINGECKO_BASE_URL=
-# EXCHANGE_RATES_COINGECKO_BASE_PRO_URL=
-# EXCHANGE_RATES_COINGECKO_PLATFORM_ID=
-# EXCHANGE_RATES_COINMARKETCAP_BASE_URL=
-# EXCHANGE_RATES_COINMARKETCAP_API_KEY=
-# EXCHANGE_RATES_COINMARKETCAP_COIN_ID=
-# EXCHANGE_RATES_COINMARKETCAP_SECONDARY_COIN_ID=
-# EXCHANGE_RATES_CRYPTOCOMPARE_BASE_URL=
-# EXCHANGE_RATES_CRYPTOCOMPARE_COIN_SYMBOL=
-# EXCHANGE_RATES_CRYPTOCOMPARE_SECONDARY_COIN_SYMBOL=
-# EXCHANGE_RATES_CRYPTORANK_SECONDARY_COIN_ID=
-# EXCHANGE_RATES_CRYPTORANK_PLATFORM_ID=
-# EXCHANGE_RATES_CRYPTORANK_BASE_URL=
-# EXCHANGE_RATES_CRYPTORANK_API_KEY=
-# EXCHANGE_RATES_CRYPTORANK_COIN_ID=
-# EXCHANGE_RATES_DEFILLAMA_COIN_ID=
-# EXCHANGE_RATES_MOBULA_CHAIN_ID=
-# EXCHANGE_RATES_MOBULA_BASE_URL=
-# EXCHANGE_RATES_MOBULA_API_KEY=
-# EXCHANGE_RATES_MOBULA_COIN_ID=
-# EXCHANGE_RATES_MOBULA_SECONDARY_COIN_ID=
-# EXCHANGE_RATES_COIN_FETCHER_ENABLED=
-# EXCHANGE_RATES_COIN_CACHE_PERIOD=
-# EXCHANGE_RATES_TOKENS_FETCHER_ENABLED=
-# EXCHANGE_RATES_TOKENS_INTERVAL=
-# EXCHANGE_RATES_TOKENS_REFETCH_INTERVAL=
-# EXCHANGE_RATES_TOKENS_MAX_BATCH_SIZE=
-# EXCHANGE_RATES_HISTORY_FETCHER_ENABLED=
-# EXCHANGE_RATES_HISTORY_FETCH_INTERVAL=
-# EXCHANGE_RATES_HISTORY_FIRST_FETCH_DAY_COUNT=
+DISABLE_MARKET=true
+# MARKET_NATIVE_COIN_SOURCE=
+# MARKET_SECONDARY_COIN_SOURCE=
+# MARKET_TOKENS_SOURCE=
+# MARKET_NATIVE_COIN_HISTORY_SOURCE=
+# MARKET_SECONDARY_COIN_HISTORY_SOURCE=
+# MARKET_CAP_HISTORY_SOURCE=
+# MARKET_TVL_HISTORY_SOURCE=
+# MARKET_COINGECKO_COIN_ID=
+# MARKET_COINGECKO_SECONDARY_COIN_ID=
+# MARKET_COINGECKO_API_KEY=
+# MARKET_COINGECKO_BASE_URL=
+# MARKET_COINGECKO_BASE_PRO_URL=
+# MARKET_COINGECKO_PLATFORM_ID=
+# MARKET_COINMARKETCAP_BASE_URL=
+# MARKET_COINMARKETCAP_API_KEY=
+# MARKET_COINMARKETCAP_COIN_ID=
+# MARKET_COINMARKETCAP_SECONDARY_COIN_ID=
+# MARKET_CRYPTOCOMPARE_BASE_URL=
+# MARKET_CRYPTOCOMPARE_COIN_SYMBOL=
+# MARKET_CRYPTOCOMPARE_SECONDARY_COIN_SYMBOL=
+# MARKET_CRYPTORANK_SECONDARY_COIN_ID=
+# MARKET_CRYPTORANK_PLATFORM_ID=
+# MARKET_CRYPTORANK_BASE_URL=
+# MARKET_CRYPTORANK_API_KEY=
+# MARKET_CRYPTORANK_COIN_ID=
+# MARKET_DEFILLAMA_COIN_ID=
+# MARKET_MOBULA_CHAIN_ID=
+# MARKET_MOBULA_BASE_URL=
+# MARKET_MOBULA_API_KEY=
+# MARKET_MOBULA_COIN_ID=
+# MARKET_MOBULA_SECONDARY_COIN_ID=
+# MARKET_COIN_FETCHER_ENABLED=
+# MARKET_COIN_CACHE_PERIOD=
+# MARKET_TOKENS_FETCHER_ENABLED=
+# MARKET_TOKENS_INTERVAL=
+# MARKET_TOKENS_REFETCH_INTERVAL=
+# MARKET_TOKENS_MAX_BATCH_SIZE=
+# MARKET_HISTORY_FETCHER_ENABLED=
+# MARKET_HISTORY_FETCH_INTERVAL=
+# MARKET_HISTORY_FIRST_FETCH_DAY_COUNT=
 POOL_SIZE=80
 POOL_SIZE_API=10
 ECTO_USE_SSL=false
