Process review comments

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -458,6 +458,10 @@ ACCOUNT_REDIS_URL=redis://redis-db:6379
 # MIGRATION_BACKFILL_METADATA_URL_DISABLED=
 # MIGRATION_BACKFILL_METADATA_URL_BATCH_SIZE=
 # MIGRATION_BACKFILL_METADATA_URL_CONCURRENCY=
+# MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_CONCURRENCY=
+# MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_BATCH_SIZE=
+# MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_TIMEOUT=
+# MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_BLOCKS_BATCH_SIZE=
 # SOURCIFY_INTEGRATION_ENABLED=false
 # SOURCIFY_SERVER_URL=
 # SOURCIFY_REPO_URL=
