--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -245,6 +245,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_ARBITRUM_ROLLUP_CHUNK_SIZE=
 # INDEXER_ARBITRUM_BATCHES_TRACKING_ENABLED=
 # INDEXER_ARBITRUM_BATCHES_TRACKING_RECHECK_INTERVAL=
+# INDEXER_ARBITRUM_BATCHES_CATCHUP_RECHECK_INTERVAL=
 # INDEXER_ARBITRUM_NEW_BATCHES_LIMIT=
 # INDEXER_ARBITRUM_MISSING_BATCHES_RANGE=
 # INDEXER_ARBITRUM_BATCHES_TRACKING_MESSAGES_TO_BLOCKS_SHIFT=
