--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -358,6 +358,7 @@ RE_CAPTCHA_DISABLED=false
 # RE_CAPTCHA_CHECK_HOSTNAME
 # RE_CAPTCHA_SCORE_THRESHOLD
 # RE_CAPTCHA_BYPASS_TOKEN
+# RE_CAPTCHA_TOKEN_INSTANCE_REFETCH_METADATA_SCOPED_BYPASS_TOKEN=
 # API_RATE_LIMIT_HAMMER_REDIS_URL=redis://redis-db:6379/1
 # API_RATE_LIMIT_IS_BLOCKSCOUT_BEHIND_PROXY=false
 # API_RATE_LIMIT_UI_V2_TOKEN_TTL_IN_SECONDS=18000
