feat: Store and validate metadata_url (#12102)
* feat: Store and validate metadata_url

* Need to fix dialyzer

* Cover with tests

* Fix tests

* Fix tests

* Finishing touches

* Refactoring

* Improve test

* Process review comments

* Process review comment

* Some fixes

* Process review comment

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -186,6 +186,9 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_TOKEN_INSTANCE_SANITIZE_CONCURRENCY=
 # INDEXER_TOKEN_INSTANCE_REFETCH_BATCH_SIZE=10
 # INDEXER_TOKEN_INSTANCE_REFETCH_CONCURRENCY=
+# INDEXER_TOKEN_INSTANCE_CIDR_BLACKLIST=
+# INDEXER_TOKEN_INSTANCE_HOST_FILTERING_ENABLED=
+# INDEXER_TOKEN_INSTANCE_ALLOWED_URI_PROTOCOLS=
 # INDEXER_DISABLE_TOKEN_INSTANCE_ERC_1155_SANITIZE_FETCHER=false
 # INDEXER_DISABLE_TOKEN_INSTANCE_ERC_721_SANITIZE_FETCHER=false
 # INDEXER_COIN_BALANCES_BATCH_SIZE=
@@ -452,6 +455,9 @@ ACCOUNT_REDIS_URL=redis://redis-db:6379
 # MIGRATION_SMART_CONTRACT_LANGUAGE_CONCURRENCY=1
 # MIGRATION_SANITIZE_EMPTY_CONTRACT_CODE_ADDRESSES_BATCH_SIZE=500
 # MIGRATION_SANITIZE_EMPTY_CONTRACT_CODE_ADDRESSES_CONCURRENCY=1
+# MIGRATION_BACKFILL_METADATA_URL_DISABLED=
+# MIGRATION_BACKFILL_METADATA_URL_BATCH_SIZE=
+# MIGRATION_BACKFILL_METADATA_URL_CONCURRENCY=
 # SOURCIFY_INTEGRATION_ENABLED=false
 # SOURCIFY_SERVER_URL=
 # SOURCIFY_REPO_URL=
