feat: Enhance health endpoint logic: track L2-rollup batches health (#11888)
* chore: Enhance health endpoint logic

* Refactor health endpoint related runtime vars

* Add healthcheck for Optimism /Polygon ZKEVM batches

* Prometheus gauge metrics: blocks, batches

* Health and metrics for Scroll

* Zksync batches indexing metric

* Update comments

* Fix credo

* Refactoring

* Process review comments

* Process review comments

* Fix tests

* Fix Polygon ZkEVM test

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -471,6 +471,9 @@ ACCOUNT_REDIS_URL=redis://redis-db:6379
 # MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_TIMEOUT=
 # MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_BLOCKS_BATCH_SIZE=
 # MIGRATION_RECOVERY_WETH_TOKEN_TRANSFERS_HIGH_VERBOSITY=
+# HEALTH_MONITOR_CHECK_INTERVAL=5m
+# HEALTH_MONITOR_BLOCKS_PERIOD=5m
+# HEALTH_MONITOR_BATCHES_PERIOD=4h
 # SOURCIFY_INTEGRATION_ENABLED=false
 # SOURCIFY_SERVER_URL=
 # SOURCIFY_REPO_URL=
