--- a/.devcontainer/.blockscout_config.example
+++ b/.devcontainer/.blockscout_config.example
@@ -1,4 +1,4 @@
-CHAIN_TYPE=ethereum
+999CHAIN_TYPE=ethereum
 
 ETHEREUM_JSONRPC_VARIANT=geth
 ETHEREUM_JSONRPC_TRACE_URL=""
@@ -60,4 +60,4 @@ API_V2_ENABLED=true
 DISABLE_CATCHUP_INDEXER='false'
 INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=10
 INDEXER_CATCHUP_BLOCKS_CONCURRENCY=10
-ETHEREUM_JSONRPC_HTTP_URL="https://ethereum-sepolia-rpc.publicnode.com"
+ETHEREUM_JSONRPC_HTTP_URL="https://rpc.buildbear.io/interim-shocker-7c7305d9"
