--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -303,6 +303,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_SCROLL_L1_MESSENGER_START_BLOCK=
 # INDEXER_SCROLL_L1_CHAIN_CONTRACT=
 # INDEXER_SCROLL_L1_BATCH_START_BLOCK=
+# INDEXER_SCROLL_L1_BATCH_BLOCKSCOUT_BLOBS_API_URL=
 # INDEXER_SCROLL_L2_MESSENGER_CONTRACT=
 # INDEXER_SCROLL_L2_MESSENGER_START_BLOCK=
 # INDEXER_SCROLL_L2_GAS_ORACLE_CONTRACT=
