missed app configuration

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -266,6 +266,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_ARBITRUM_CONFIRMATIONS_TRACKING_FINALIZED=
 # INDEXER_ARBITRUM_BATCHES_TRACKING_L1_FINALIZATION_CHECK_ENABLED=
 # INDEXER_ARBITRUM_BATCHES_TRACKING_FAILURE_THRESHOLD=
+# INDEXER_ARBITRUM_MESSAGES_FROM_ROLLUP_BATCH_SIZE=
 # INDEXER_ARBITRUM_BRIDGE_MESSAGES_TRACKING_ENABLED=
 # INDEXER_ARBITRUM_TRACKING_MESSAGES_ON_L1_RECHECK_INTERVAL=
 # INDEXER_ARBITRUM_MISSED_MESSAGES_RECHECK_INTERVAL=
