--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -514,7 +514,7 @@ ACCOUNT_REDIS_URL=redis://redis-db:6379
 # PUBLIC_METRICS_UPDATE_PERIOD_HOURS=
 # CSV_EXPORT_LIMIT=
 # SHRINK_INTERNAL_TRANSACTIONS_ENABLED=
-NFT_MEDIA_HANDLER_ENABLED=true
+NFT_MEDIA_NDLER_ENABLED=true
 NFT_MEDIA_HANDLER_REMOTE_DISPATCHER_NODE_MODE_ENABLED=true
 RELEASE_NODE=producer@172.18.0.4
 RELEASE_DISTRIBUTION=name
@@ -563,3 +563,4 @@ RELEASE_COOKIE=secret_cookie
 # NETWORK_PATH=/
 # RE_CAPTCHA_CLIENT_KEY=
 # RE_CAPTCHA_V3_CLIENT_KEY=
+# HACKNEY_DEFAULT_POOL_SIZE=1000
