fix: Fix :checkout_timeout error (#12406)
* fix: Fix :checkout_timeout error

* Add env to .env

* Fix .env file

* Set hackney: [pool: false] for multichain search

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -563,3 +563,4 @@ RELEASE_COOKIE=secret_cookie
 # NETWORK_PATH=/
 # RE_CAPTCHA_CLIENT_KEY=
 # RE_CAPTCHA_V3_CLIENT_KEY=
+# HACKNEY_DEFAULT_POOL_SIZE=1000
