--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -180,6 +180,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=
 # INDEXER_DISABLE_WITHDRAWALS_FETCHER=
 # INDEXER_DISABLE_REPLACED_TRANSACTION_FETCHER=
+# INDEXER_DISABLE_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_FETCHER=
 # INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
 # INDEXER_CATCHUP_BLOCK_INTERVAL=
@@ -198,6 +199,8 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_TOKEN_INSTANCE_SANITIZE_CONCURRENCY=
 # INDEXER_TOKEN_INSTANCE_REFETCH_BATCH_SIZE=10
 # INDEXER_TOKEN_INSTANCE_REFETCH_CONCURRENCY=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_BATCH_SIZE=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_CONCURRENCY=
 # INDEXER_TOKEN_INSTANCE_CIDR_BLACKLIST=
 # INDEXER_TOKEN_INSTANCE_HOST_FILTERING_ENABLED=
 # INDEXER_TOKEN_INSTANCE_ALLOWED_URI_PROTOCOLS=
