fix: add prague Solidity EVM version (#12115)

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -128,7 +128,7 @@ RELEASE_LINK=
 # TOKEN_INSTANCE_METADATA_REFETCH_ON_DEMAND_FETCHER_THRESHOLD=
 # ADDRESSES_TABS_COUNTERS_TTL=10m
 # TOKEN_METADATA_UPDATE_INTERVAL=172800
-# CONTRACT_VERIFICATION_ALLOWED_SOLIDITY_EVM_VERSIONS=homestead,tangerineWhistle,spuriousDragon,byzantium,constantinople,petersburg,istanbul,berlin,london,paris,shanghai,cancun,default
+# CONTRACT_VERIFICATION_ALLOWED_SOLIDITY_EVM_VERSIONS=homestead,tangerineWhistle,spuriousDragon,byzantium,constantinople,petersburg,istanbul,berlin,london,paris,shanghai,cancun,prague,default
 # CONTRACT_VERIFICATION_ALLOWED_VYPER_EVM_VERSIONS=byzantium,constantinople,petersburg,istanbul,berlin,paris,shanghai,cancun,default
 # CONTRACT_VERIFICATION_MAX_LIBRARIES=10
 # CONTRACT_AUDIT_REPORTS_AIRTABLE_URL=
