Add reindex IT migration envs to common-blockscout.env

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -461,6 +461,9 @@ ACCOUNT_REDIS_URL=redis://redis-db:6379
 # MIGRATION_REINDEX_INTERNAL_TRANSACTIONS_STATUS_BATCH_SIZE=
 # MIGRATION_REINDEX_INTERNAL_TRANSACTIONS_STATUS_CONCURRENCY=
 # MIGRATION_REINDEX_INTERNAL_TRANSACTIONS_STATUS_TIMEOUT=
+# MIGRATION_REINDEX_DUPLICATED_INTERNAL_TRANSACTIONS_BATCH_SIZE=
+# MIGRATION_REINDEX_DUPLICATED_INTERNAL_TRANSACTIONS_CONCURRENCY=
+# MIGRATION_REINDEX_DUPLICATED_INTERNAL_TRANSACTIONS_TIMEOUT=
 # MIGRATION_SHRINK_INTERNAL_TRANSACTIONS_BATCH_SIZE=
 # MIGRATION_SHRINK_INTERNAL_TRANSACTIONS_CONCURRENCY=
 # MIGRATION_ARBITRUM_DA_RECORDS_NORMALIZATION_BATCH_SIZE=
