--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -201,6 +201,8 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_TOKEN_INSTANCE_REFETCH_CONCURRENCY=
 # INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_BATCH_SIZE=
 # INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_CONCURRENCY=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_ENQUEUE_BUSY_WAITING_TIMEOUT=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_MAX_QUEUE_SIZE=
 # INDEXER_TOKEN_INSTANCE_CIDR_BLACKLIST=
 # INDEXER_TOKEN_INSTANCE_HOST_FILTERING_ENABLED=
 # INDEXER_TOKEN_INSTANCE_ALLOWED_URI_PROTOCOLS=
