--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -396,6 +396,7 @@ RE_CAPTCHA_DISABLED=false
 # MICROSERVICE_SC_VERIFIER_ENABLED=true
 # MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
 # MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
+# MICROSERVICE_SC_VERIFIER_API_KEY=
 MICROSERVICE_SC_VERIFIER_TYPE=eth_bytecode_db
 # MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 # MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
@@ -412,6 +413,8 @@ MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
 # MICROSERVICE_METADATA_PROXY_REQUESTS_TIMEOUT=
 # MICROSERVICE_STYLUS_VERIFIER_URL=
 # MICROSERVICE_MULTICHAIN_SEARCH_URL=
+# MICROSERVICE_MULTICHAIN_SEARCH_API_KEY=
+# MICROSERVICE_MULTICHAIN_SEARCH_ADDRESSES_CHUNK_SIZE=
 # MICROSERVICE_TAC_OPERATION_LIFECYCLE_ENABLED=
 # MICROSERVICE_TAC_OPERATION_LIFECYCLE_URL=
 DECODE_NOT_A_CONTRACT_CALLS=true
