--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -180,6 +180,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_DISABLE_EMPTY_BLOCKS_SANITIZER=
 # INDEXER_DISABLE_WITHDRAWALS_FETCHER=
 # INDEXER_DISABLE_REPLACED_TRANSACTION_FETCHER=
+# INDEXER_DISABLE_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_FETCHER=
 # INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
 # INDEXER_CATCHUP_BLOCK_INTERVAL=
@@ -198,6 +199,10 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_TOKEN_INSTANCE_SANITIZE_CONCURRENCY=
 # INDEXER_TOKEN_INSTANCE_REFETCH_BATCH_SIZE=10
 # INDEXER_TOKEN_INSTANCE_REFETCH_CONCURRENCY=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_BATCH_SIZE=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_CONCURRENCY=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_ENQUEUE_BUSY_WAITING_TIMEOUT=
+# INDEXER_MULTICHAIN_SEARCH_DB_EXPORT_RETRY_MAX_QUEUE_SIZE=
 # INDEXER_TOKEN_INSTANCE_CIDR_BLACKLIST=
 # INDEXER_TOKEN_INSTANCE_HOST_FILTERING_ENABLED=
 # INDEXER_TOKEN_INSTANCE_ALLOWED_URI_PROTOCOLS=
@@ -391,6 +396,7 @@ RE_CAPTCHA_DISABLED=false
 # MICROSERVICE_SC_VERIFIER_ENABLED=true
 # MICROSERVICE_SC_VERIFIER_URL=http://smart-contract-verifier:8050/
 # MICROSERVICE_SC_VERIFIER_TYPE=sc_verifier
+# MICROSERVICE_SC_VERIFIER_API_KEY=
 MICROSERVICE_SC_VERIFIER_TYPE=eth_bytecode_db
 # MICROSERVICE_ETH_BYTECODE_DB_INTERVAL_BETWEEN_LOOKUPS=10m
 # MICROSERVICE_ETH_BYTECODE_DB_MAX_LOOKUPS_CONCURRENCY=10
@@ -407,6 +413,8 @@ MICROSERVICE_ACCOUNT_ABSTRACTION_URL=http://user-ops-indexer:8050/
 # MICROSERVICE_METADATA_PROXY_REQUESTS_TIMEOUT=
 # MICROSERVICE_STYLUS_VERIFIER_URL=
 # MICROSERVICE_MULTICHAIN_SEARCH_URL=
+# MICROSERVICE_MULTICHAIN_SEARCH_API_KEY=
+# MICROSERVICE_MULTICHAIN_SEARCH_ADDRESSES_CHUNK_SIZE=
 # MICROSERVICE_TAC_OPERATION_LIFECYCLE_ENABLED=
 # MICROSERVICE_TAC_OPERATION_LIFECYCLE_URL=
 DECODE_NOT_A_CONTRACT_CALLS=true
