--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -17,6 +17,7 @@ on:
       - production-sokol
       - production-suave
       - production-xdai
+      - production-via
       - production-zkevm
       - production-zksync
       - staging-l2
@@ -65,6 +66,7 @@ jobs:
               "stability",
               "zetachain",
               "zilliqa",
+              "via",
               "zksync",
               "neon"
             ];
