--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -577,3 +577,4 @@ RELEASE_COOKIE=secret_cookie
 # RE_CAPTCHA_CLIENT_KEY=
 # RE_CAPTCHA_V3_CLIENT_KEY=
 # HACKNEY_DEFAULT_POOL_SIZE=1000
+# UNIVERSAL_PROXY_CONFIG_URL=
