--- a/docker-compose/envs/common-frontend.env
+++ b/docker-compose/envs/common-frontend.env
@@ -17,8 +17,12 @@ NEXT_PUBLIC_API_WEBSOCKET_PROTOCOL=wss
 NEXT_PUBLIC_API_SPEC_URL=https://raw.githubusercontent.com/blockscout/blockscout-api-v2-swagger/main/swagger.yaml
 NEXT_PUBLIC_FOOTER_LINKS=https://raw.githubusercontent.com/Uomi-network/uomi-explorer/master/frontend-config/footer-links.json
 NEXT_PUBLIC_WEB3_WALLETS=['metamask']
-NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc2.uomi.ai
+NEXT_PUBLIC_NETWORK_RPC_URL=https://finney.uomi.ai
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=322727203e59d903d5b47fc139685acd
 NEXT_PUBLIC_AD_BANNER_PROVIDER=none
 NEXT_PUBLIC_AD_TEXT_PROVIDER=none
 NEXT_PUBLIC_NETWORK_ICON=https://raw.githubusercontent.com/Uomi-network/uomi-explorer/master/frontend-config/favicon.png
+NEXT_PUBLIC_RE_CAPTCHA_APP_SITE_KEY=6LetqkErAAAAACfT3NbUqttwiRi958nLo6YhVlrI
+NEXT_PUBLIC_IS_ACCOUNT_SUPPORTED=true
+NEXT_PUBLIC_CONTRACT_INFO_API_HOST=https://explorer.uomi.ai
+NEXT_PUBLIC_ADMIN_SERVICE_API_HOST=https://.explorer.uomi.ai/admin-service
