feat: add transactions and users management pages with pagination and search functionality
feat: implement user management with add, edit, and delete capabilities

chore: add TypeScript configuration for admin frontend

chore: create network check script for Docker environment diagnostics

docs: add FAQ for common issues and solutions in admin panel

chore: create admin panel helper script for Docker commands

chore: add package-lock.json for admin backend and frontend

chore: setup Docker Compose for admin backend and frontend services

chore: add health checks and resource limits for Docker services

chore: create script to update dependencies for admin panel components

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,8 @@ tasks_in_progress
 
 docker-compose/services/blockscout-web-data
 docker-compose/services/data
+
+node_modules
+admin-frontend/node_modules
+.next
+.env
