--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -98,6 +98,20 @@ services:
       file: ./services/user-ops-indexer.yml
       service: user-ops-indexer
 
+  admin-backend:
+    depends_on:
+      - db
+    extends:
+      file: ./services/admin-backend.yml
+      service: admin-backend
+
+  admin-frontend:
+    depends_on:
+      - admin-backend
+    extends:
+      file: ./services/admin-frontend.yml
+      service: admin-frontend
+
   # proxy:
   #   depends_on:
   #     - backend
