--- a/admin-backend/package.json
+++ b/admin-backend/package.json
@@ -21,10 +21,12 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^2.0.0",
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
+    "uuid": "^11.1.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
