--- a/admin-frontend/public/config.json
+++ b/admin-frontend/public/config.json
@@ -1,8 +1,8 @@
 {
-  "AUTH0_DOMAIN": "your-auth0-domain.auth0.com",
-  "AUTH0_CLIENT_ID": "your-auth0-client-id",
-  "AUTH0_AUDIENCE": "https://api.uomi-explorer.com",
+  "AUTH0_DOMAIN": "uomi.us.auth0.com",
+  "AUTH0_CLIENT_ID": "a6Za5bPM8VxFitAA8C80ZoMlfBSwMFzP",
+  "AUTH0_AUDIENCE": "https://uomi.us.auth0.com/api/v2/",
   "AUTH0_REDIRECT_URI": "http://localhost:3010/callback",
   "AUTH0_SCOPE": "openid profile email",
-  "API_URL": "http://localhost:4000/api"
+  "API_URL": "http://localhost:4010/api"
 }
