--- a/docker-compose/services/admin-backend.yml
+++ b/docker-compose/services/admin-backend.yml
@@ -13,12 +13,7 @@ services:
     environment:
       - NODE_ENV=development
       - PORT=4010
-      - DB_HOST=${DB_HOST:-db}
-      - DB_PORT=${DB_PORT:-5432}
-      - DB_NAME=${DB_NAME:-postgres}
-      - DB_USER=${DB_USER:-postgres}
-      - DB_PASSWORD=${DB_PASSWORD:-postgres}
-      - JWT_SECRET=${JWT_SECRET:-devSecret}
+    #QUI
     healthcheck:
       test: ["CMD", "wget", "-qO-", "http://localhost:4010/health"]
       interval: 30s
