chore: add new variables to common-blockscout.env

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -323,6 +323,9 @@ API_V1_WRITE_METHODS_DISABLED=false
 # SCROLL_L1_BLOB_BASE_FEE_INIT=
 # CELO_CORE_CONTRACTS=
 # CELO_L2_MIGRATION_BLOCK=
+# CELO_EPOCH_MANAGER_CONTRACT=
+# CELO_UNRELEASED_TREASURY_CONTRACT=
+# CELO_VALIDATORS_CONTRACT=
 # INDEXER_CELO_VALIDATOR_GROUP_VOTES_BATCH_SIZE=200000
 # INDEXER_DISABLE_CELO_EPOCH_FETCHER=false
 # INDEXER_DISABLE_CELO_VALIDATOR_GROUP_VOTES_FETCHER=false
