--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -181,6 +181,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_DISABLE_WITHDRAWALS_FETCHER=
 # INDEXER_DISABLE_REPLACED_TRANSACTION_FETCHER=
 # INDEXER_DISABLE_MULTICHAIN_SEARCH_DB_EXPORT_QUEUE_PROCESSOR_FETCHER=
+# INDEXER_DISABLE_MULTICHAIN_SEARCH_DB_BALANCES_EXPORT_QUEUE_PROCESSOR_FETCHER
 # INDEXER_CATCHUP_BLOCKS_BATCH_SIZE=
 # INDEXER_CATCHUP_BLOCKS_CONCURRENCY=
 # INDEXER_CATCHUP_BLOCK_INTERVAL=
