Add INDEXER_POLYGON_ZKEVM_BATCHES_IGNORE env variable

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -231,6 +231,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_POLYGON_ZKEVM_BATCHES_ENABLED=
 # INDEXER_POLYGON_ZKEVM_BATCHES_CHUNK_SIZE=
 # INDEXER_POLYGON_ZKEVM_BATCHES_RECHECK_INTERVAL=
+# INDEXER_POLYGON_ZKEVM_BATCHES_IGNORE=0
 # INDEXER_POLYGON_ZKEVM_L1_RPC=
 # INDEXER_POLYGON_ZKEVM_L1_BRIDGE_START_BLOCK=
 # INDEXER_POLYGON_ZKEVM_L1_BRIDGE_CONTRACT=
