feat: Decode OP interop message payload, store cross-chain transfer data, display message page, send messages to Multichain (#12387)
* Add payload parsing for interop messages

* Ignore INDEXER_OPTIMISM_INTEROP_EXPORT_EXPIRATION_DAYS for the first 3 iterations

* Clear OP interop messages table

* Limit memory consumption by Interop.MessageQueue fetcher

* Add Optimism.Interop.MultichainExport fetcher

* Add /api/v2/optimism/interop/messages/:unique_id API endpoint

* Fix for sobelow

* Refactoring

* Use parameterized raw query

* Refactoring

* Improve post request

* Fixes and refactoring

* Add INDEXER_POLYGON_ZKEVM_BATCHES_IGNORE env variable

* Refactoring

---------

Co-authored-by: POA <33550681+poa@users.noreply.github.com>

--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -236,6 +236,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_POLYGON_ZKEVM_BATCHES_ENABLED=
 # INDEXER_POLYGON_ZKEVM_BATCHES_CHUNK_SIZE=
 # INDEXER_POLYGON_ZKEVM_BATCHES_RECHECK_INTERVAL=
+# INDEXER_POLYGON_ZKEVM_BATCHES_IGNORE=0
 # INDEXER_POLYGON_ZKEVM_L1_RPC=
 # INDEXER_POLYGON_ZKEVM_L1_BRIDGE_START_BLOCK=
 # INDEXER_POLYGON_ZKEVM_L1_BRIDGE_CONTRACT=
@@ -303,6 +304,7 @@ API_V1_WRITE_METHODS_DISABLED=false
 # INDEXER_OPTIMISM_INTEROP_CONNECT_TIMEOUT=
 # INDEXER_OPTIMISM_INTEROP_RECV_TIMEOUT=
 # INDEXER_OPTIMISM_INTEROP_EXPORT_EXPIRATION_DAYS=
+# INDEXER_OPTIMISM_MULTICHAIN_BATCH_SIZE=
 # INDEXER_SCROLL_L1_RPC=
 # INDEXER_SCROLL_L1_MESSENGER_CONTRACT=
 # INDEXER_SCROLL_L1_MESSENGER_START_BLOCK=
