--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,16 +1,16 @@
 version: 2
 updates:
-  - package-ecosystem: "mix"
+  - package-ecosystem: "solidity"
     directory: "/"
     open-pull-requests-limit: 20
     schedule:
-      interval: "weekly"
+      interval: "hourly" 
       
   - package-ecosystem: "npm"
     directory: "/apps/block_scout_web/assets"
     open-pull-requests-limit: 10
     schedule:
-      interval: "monthly"
+      interval: "hourly"
     ignore:
       - dependency-name: "bootstrap"
       - dependency-name: "web3"
@@ -18,6 +18,6 @@ updates:
       
   - package-ecosystem: "npm"
     directory: "/apps/explorer"
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 10000
     schedule:
-      interval: "monthly"
+      interval: "hourly"
