--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -482,6 +482,10 @@ ACCOUNT_REDIS_URL=redis://redis-db:6379
 # MIGRATION_REINDEX_DUPLICATED_INTERNAL_TRANSACTIONS_BATCH_SIZE=
 # MIGRATION_REINDEX_DUPLICATED_INTERNAL_TRANSACTIONS_CONCURRENCY=
 # MIGRATION_REINDEX_DUPLICATED_INTERNAL_TRANSACTIONS_TIMEOUT=
+# MIGRATION_REINDEX_BLOCKS_WITH_MISSING_TRANSACTIONS_BATCH_SIZE=
+# MIGRATION_REINDEX_BLOCKS_WITH_MISSING_TRANSACTIONS_CONCURRENCY=
+# MIGRATION_REINDEX_BLOCKS_WITH_MISSING_TRANSACTIONS_TIMEOUT=
+# MIGRATION_REINDEX_BLOCKS_WITH_MISSING_TRANSACTIONS_ENABLED=
 # MIGRATION_SHRINK_INTERNAL_TRANSACTIONS_BATCH_SIZE=
 # MIGRATION_SHRINK_INTERNAL_TRANSACTIONS_CONCURRENCY=
 # MIGRATION_ARBITRUM_DA_RECORDS_NORMALIZATION_BATCH_SIZE=
